fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,10 @@ textarea {
   font-size: 20px;
 }
 
+.experience-information-container {
+  overflow-y: scroll;
+}
+
 .education-header,
 .experience-header {
   font-size: 24px;
@@ -138,3 +142,4 @@ textarea {
 .education-info {
   margin-bottom: .5rem;
 }
+
